JS Unit testing:   * moved mail related JS files into subfolder "mail"   * wrote test for mailItem: renderMail by using mocked up click event

--- a/static/resources/js/all_tests.html
+++ b/static/resources/js/all_tests.html
@@ -75,7 +75,7 @@ a:hover {
 </form>
 <script>
   // Add all test html files here, relative to this files location
-  var _allTests = ["mail_test.html"];
+  var _allTests = ["mail/mailItem_test.html"];
 
   var hidePassesInput = document.getElementById('hidepasses');
   var parallelInput = document.getElementById('parallel');
