--- a/static/resources/js/mail/mailItem_test.html
+++ b/static/resources/js/mail/mailItem_test.html
@@ -12,14 +12,15 @@ See the COPYING file for details.
   <title>
    Watney Integration testing - wat.mail
   </title>
-  <script src="../libs/closure-library/closure/goog/base.js">
+  <script src="../../libs/closure-library/closure/goog/base.js">
   </script>
-  <script src="watney-deps.js">
+  <script src="../watney-deps.js">
   </script>
   <script>
     goog.require('wat.mail.MailTest');
   </script>
  </head>
  <body>
+ <div id="mailItems"></div>
  </body>
 </html>
