Frontend Spam folder: * added local client-side folder named: SPAM that only displays Mails, which have been classified as Spam * this folder doesn't exist on the server

--- a/static/resources/js/mail/mailHandler_test.html
+++ b/static/resources/js/mail/mailHandler_test.html
@@ -17,10 +17,11 @@ See the COPYING file for details.
   <script src="../watney-deps.js">
   </script>
   <script>
-    goog.require('wat.mail.MailItemTest');
+    goog.require('wat.mail.MailHandlerTest');
   </script>
  </head>
  <body>
      <div id="mailItems"></div>
+     <div id="ctrlBarContainer"></div>
  </body>
 </html>
