Navigation improvement: * outsourced hardcoded navigation button HTML code into soy template * extended mailbox folder class with render function to take care of rendering the navigation buttons * added tests for new mailbox folder render method

--- a/static/resources/js/all_tests.html
+++ b/static/resources/js/all_tests.html
@@ -75,7 +75,8 @@ a:hover {
 </form>
 <script>
   // Add all test html files here, relative to this files location
-  var _allTests = ["mail/mailItem_test.html", "mail/mailHandler_test.html"];
+  var _allTests = ["mail/mailitem_test.html", "mail/mailhandler_test.html",
+      "mail/mailboxfolder_test.html"];
 
   var hidePassesInput = document.getElementById('hidepasses');
   var parallelInput = document.getElementById('parallel');
