--- a/static/resources/js/mail/mailhandler_test.html
+++ b/static/resources/js/mail/mailhandler_test.html
@@ -23,5 +23,6 @@ See the COPYING file for details.
  <body>
      <div id="mailItems"></div>
      <div id="ctrlBarContainer"></div>
+     <div id="navBarContainer"></div>
  </body>
 </html>
