Modal Dialog for EmptyTrash: - implemented logic to permanently delete trashed mail item - included deletion on DEL key stroke for trash mailbox - included 'empty mailbox folder message' in mail overview list

--- a/static/resources/js/mail/mailboxfolder_test.html
+++ b/static/resources/js/mail/mailboxfolder_test.html
@@ -21,8 +21,23 @@ See the COPYING file for details.
   </script>
  </head>
  <body>
+     <!-- Mail item overview list -->
      <div id="mailItems"></div>
-     <div id="ctrlBarContainer"></div>
+     <!-- Navigation bar with the mailboxes on the left side -->
      <div id="navBarContainer"></div>
+     <!-- Control bar in the mail details component on the right side -->
+     <div id="ctrlBarContainer"></div>
+     <div id="trashRestoreBtn"></div>
+     <div id="trashEmptyBtn"></div>
+     <!-- Mail content -->
+     <div id="mailItems"></div>
+     <!-- Mail details -->
+     <div id="mailDetails_From"></div>
+     <div id="mailDetails_Subject"></div>
+     <div id="mailDetails_To"></div>
+     <div id="mailDetails_Content"></div>
+     <div class="row content">
+         <div id="mailDetails_Content" class="col-md-12" style="overflow-x: hidden;"></div>
+     </div>
  </body>
 </html>
