Search Bar: - forgot to include html file

--- a/static/resources/js/mail/mailboxfolder_test.html
+++ b/static/resources/js/mail/mailboxfolder_test.html
@@ -29,7 +29,8 @@ See the COPYING file for details.
      <div id="ctrlBarContainer"></div>
      <div id="trashRestoreBtn"></div>
      <div id="trashEmptyBtn"></div>
-     <!-- Mail content -->
+     <!-- Mail overview -->
+     <div id="OverviewSearchBar"></div>
      <div id="mailItems"></div>
      <!-- Mail details -->
      <div id="mailDetails_From"></div>
