Image Load Prevention: - implemented method to avoid automated loading of potential harmful images in a text/html mail - implemented user notification to enable him to load such images if desired

--- a/static/resources/js/mail/mailboxfolder_test.html
+++ b/static/resources/js/mail/mailboxfolder_test.html
@@ -21,8 +21,6 @@ See the COPYING file for details.
   </script>
  </head>
  <body>
-     <!-- Mail item overview list -->
-     <div id="mailItems"></div>
      <!-- Navigation bar with the mailboxes on the left side -->
      <div id="navBarContainer"></div>
      <!-- Control bar in the mail details component on the right side -->
@@ -36,8 +34,8 @@ See the COPYING file for details.
      <div id="mailDetails_From"></div>
      <div id="mailDetails_Subject"></div>
      <div id="mailDetails_To"></div>
-     <div id="mailDetails_Content"></div>
-     <div class="row content">
+     <div id="mailDetails_Content_Container" class="row content">
+         <div id="imgWarning_Content" class="col-md-12"></div>
          <div id="mailDetails_Content" class="col-md-12" style="overflow-x: hidden;"></div>
      </div>
  </body>
